@@ -1,4 +1,5 @@
 DIST universalindentgui-1.1.0.tar.gz 934141 RMD160 0d6e84e5b9a8b4835c7cb1d6ec7c078cfe3fff36 SHA1 e1bb09e48bb2d927d2a9e59eb5b8eb7fa2a8193e SHA256 6b1d06e2a9d441ea330d45e0d8e9099acb3066a3ca259a5f0d604cd18a1025d6
+EBUILD universalindentgui-1.1.0-r1.ebuild 3714 RMD160 edcb787ceb1584298c01bd213c3ee726f074c75a SHA1 72de3a42cbf826e9001cffe63e423c8651bf15c0 SHA256 4e5b41649fd4f5e3048c315f4698edd868df8ccc0d1865c67b82348ba7af8b4a
 EBUILD universalindentgui-1.1.0.ebuild 3536 RMD160 123cac8e7be9e7e62c1aeca327bff5ad2697211f SHA1 06af7052855b764c9f64057a07201b793a29f1bd SHA256 24791fac45541530e8d12a192c0c488ac066e7a594da911fadf96cb00fac8fc1
-MISC ChangeLog 562 RMD160 c23b48a27f2a65935ce59322bbe7e429da10a2ae SHA1 2cada891cab316a406edd74daef4ac7f4258e54b SHA256 4cd68d73d75738e419071c92c3dcb13a0ec7cfec111c8a999796b3d2bcf69e01
+MISC ChangeLog 729 RMD160 18960abb031770d9fea5d028328f82bf32495d68 SHA1 88c2d385a0d1e9cff7e2896067574ee74e8d5893 SHA256 6141c6c3039dac9826bb6c2f89caece43f617f1dcc6c8f7db1424c08b6bfe008
 MISC metadata.xml 356 RMD160 4d279df51ce172f5947ac8332613d56331c86ebf SHA1 cd2cdf21d586eedf80ae3d56c5c6a1145da8709f SHA256 221135864588497dc8022a255c5b6d0d42aeb8ec28e3442ffcdbe015ee7ca0bb
