@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/universalindentgui
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/universalindentgui/ChangeLog,v 1.2 2009/07/18 19:14:23 wired Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/universalindentgui/ChangeLog,v 1.3 2009/07/18 20:25:26 wired Exp $
+
+*universalindentgui-1.1.0-r1 (18 Jul 2009)
+
+  18 Jul 2009; Alex Alexander <wired@gentoo.org>
+  +universalindentgui-1.1.0-r1.ebuild:
+  added desktop file / menu entry
 
   18 Jul 2009; Alex Alexander <wired@gentoo.org>
   universalindentgui-1.1.0.ebuild:
